chore(html): add challenge rules on index file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fintual Challenge</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script type="module" src="./index.js"></script>
-    <title>Document</title>
 </head>
 <body>
-    Hola PRRO!!
+  <section class="hero is-link">
+    <div class="hero-body">
+      <h1 class="title"><strong>Fintual</strong> challenge 🏅 </h1>
+        <p class="subtitle">
+          Construct a simple Portfolio class that has a collection of Stocks and a “Profit”
+          method that receives 2 dates and retuns the profit of the Portfolio between those dates.
+          Assume each Stock has a “Price” method that receives a date and returns its price.
+        </p>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="content">
+      <h3 class="title">1. Construct a simple Portfolio class 💼 </h3>
+      <ol type="a">
+        <li>That has a collection of Stocks</li>
+        <li>And a “Profit” method</li>
+      </ol>
+
+      <h3 class="title">2. The "Profit" method 🤑 </h3>
+      <ol type="a">
+        <li>It'll be able to receives 2 dates</li>
+        <li>The method will retuns the profit of the Portfolio between those dates</li>
+      </ol>
+
+      <h3 class="title">3. Each Stock has a “Price” method 💰 </h3>
+      <ol type="a">
+        <li>The method receives a date</li>
+        <li>The method returns the stock price.</li>
+      </ol>
+
+      <h3 class="title">S. 🔥  Bonus Track</h3>
+      <ul>
+        <li>Make the Profit method return the “annualized return” of the portfolio between the given dates.</li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
